chore: prevent +/- buttons from being visible after click and only show on hover

--- a/src/components/main-sidebar/dimension-item/styles/draggable-dimension-item.module.css
+++ b/src/components/main-sidebar/dimension-item/styles/draggable-dimension-item.module.css
@@ -10,6 +10,6 @@
 }
 
 .content:hover .iconButtonWrapper,
-.content:focus-within .iconButtonWrapper {
+.content:has(:focus-visible) .iconButtonWrapper {
     visibility: visible;
 }
